--- a/styles.css
+++ b/styles.css
@@ -10,20 +10,22 @@ nav {
   height: 75px;
   background: #5a5a5a;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 nav .navbar {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  max-width: 90%;
+  height: 75px;
   background: #5a5a5a;
-  margin: auto;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 nav .navbar .menu {
   display: flex;
+  justify-content: center;
 }
 
 .navbar .menu li {
@@ -53,9 +55,35 @@ section {
 }
 
 #About {
+  display: flex;
+  flex-direction: column;
+  /*align-items: center;
+  text-align: center;*/
+  padding: 0 20px;
   background: #5a5a5a;
 }
 
+#About img {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  height: auto;
+  border-radius: 50%;
+  margin-top: 5%;
+  margin-bottom: 10px;
+}
+#About p {
+  display: flex;
+  text-align: center;
+  width: 40%;
+  max-width: 100%;
+  font-size: 40px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+}
 #PreviousWork {
   background: #fff;
 }
@@ -77,7 +105,31 @@ section {
   background-color: #fff;
   margin-bottom: 4px;
 }
+@media (max-width: 1540px) {
+  #About {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  #About img {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    height: auto;
+    border-radius: 50%;
+    margin-top: 5%;
+    margin-bottom: 10px;
+  }
 
+  #About p {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 30px;
+  }
+}
 @media all and (max-width: 480px) {
   .navbar {
     flex-direction: column;
@@ -104,5 +156,25 @@ section {
     box-sizing: border-box;
     text-align: left;
     margin-left: -80;
+  }
+  #About {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  #About img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    top: 10%;
+  }
+
+  #About p {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 20px;
   }
 }
