--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,49 @@ section {
   background-color: #fff;
   margin-bottom: 4px;
 }
+
+#PreviousWork {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  height: 100vh;
+  background: #fff;
+}
+
+.accordion {
+  background-color: #5a5a5a;
+  color: #fff;
+  cursor: pointer;
+  padding: 18px;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+  margin-bottom: 10px;
+}
+
+.active,
+.accordion:hover {
+  background-color: #ccc;
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: #fffff0;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  font-size: 18px;
+}
+
+.panel p {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
 @media (max-width: 1540px) {
   #About {
     display: flex;
