--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,8 @@ section {
 
 .active,
 .accordion:hover {
-  background-color: #ccc;
+  background-color: #fff;
+  color: #000000;
 }
 
 .panel {
@@ -161,6 +162,32 @@ section {
   background-color: #000000;
 }
 
+.card {
+  display: inline-block;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #000000;
+  border-radius: 4px;
+  text-align: center;
+  margin: 10px;
+  padding: 20px;
+  cursor: pointer;
+  color: fff;
+  background-color: #5a5a5a;
+  transition: background-color 0.3s;
+  overflow: hidden;
+}
+
+.card:hover {
+  background-color: #fff;
+  color: #000000;
+}
+
+.card p {
+  font-size: 30px;
+  line-height: 1.2;
+  max-height: 100%;
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -194,7 +221,7 @@ textarea {
 }
 
 .submit {
-  border: none;
+  border: solid 1px;
   outline: 0;
   display: inline;
   padding: 8px;
@@ -207,7 +234,8 @@ textarea {
 }
 
 .submit:hover {
-  background-color: #000000;
+  background-color: #fff;
+  color: #000000;
 }
 
 @media (max-width: 1540px) {
@@ -281,5 +309,13 @@ textarea {
     margin-left: 0;
     margin-right: 0;
     font-size: 20px;
+  }
+  #cardContainer {
+    text-align: center;
+  }
+
+  .card {
+    display: block;
+    margin: 10px auto;
   }
 }
