--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,6 @@ section {
 #About {
   display: flex;
   flex-direction: column;
-  /*align-items: center;
-  text-align: center;*/
   padding: 0 20px;
   background: #5a5a5a;
 }
@@ -67,7 +65,7 @@ section {
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  width: 400px;
+  width: 350px;
   height: auto;
   border-radius: 50%;
   margin-top: 5%;
@@ -78,7 +76,7 @@ section {
   text-align: left;
   width: 40%;
   max-width: 100%;
-  font-size: 40px;
+  font-size: 30px;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
@@ -172,7 +170,7 @@ section {
   margin: 10px;
   padding: 20px;
   cursor: pointer;
-  color: fff;
+  color: #fff;
   background-color: #5a5a5a;
   transition: background-color 0.3s;
   overflow: hidden;
@@ -288,7 +286,7 @@ textarea {
     width: 80%;
     box-sizing: border-box;
     text-align: left;
-    margin-left: -80;
+    margin-left: -80px;
   }
   #About {
     display: flex;
