--- a/styles.css
+++ b/styles.css
@@ -261,6 +261,17 @@ textarea {
     font-size: 30px;
   }
 }
+@media (max-width: 700px) {
+  .panel {
+    padding: 0 18px;
+    max-height: 0;
+    font-size: 20px;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    display: flex;
+    flex-direction: column;
+  }
+}
 @media all and (max-width: 480px) {
   .navbar {
     flex-direction: column;
